add mn-nb1 and mn-nb2

--- a/events/1617velv/mn/1617velv-mn-nb1-Rankings.html
+++ b/events/1617velv/mn/1617velv-mn-nb1-Rankings.html
@@ -1,2 +1,26 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Minnesota North Branch 1<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>9890</TD><TD>The Rubies</TD><TD>10</TD><TD>286</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>7655</TD><TD>The Q is Silqent</TD><TD>9</TD><TD>273</TD><TD>120</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>8438</TD><TD>Quantum Leap</TD><TD>8</TD><TD>247</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>9258</TD><TD>The Glorious Dweebs</TD><TD>7</TD><TD>175</TD><TD>140</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>2887</TD><TD>Edina Bucket Brigade</TD><TD>6</TD><TD>236</TD><TD>91</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>11301</TD><TD>Maranatha Christian Academy FTC 1</TD><TD>6</TD><TD>232</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>7646</TD><TD>Circuit Overlords</TD><TD>6</TD><TD>220</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>7288</TD><TD>RoboGlaciers</TD><TD>6</TD><TD>217</TD><TD>120</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>9430</TD><TD>Typhoons</TD><TD>6</TD><TD>172</TD><TD>115</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>11413</TD><TD>Auto Anonymous Chisago Lakes Middle School</TD><TD>6</TD><TD>108</TD><TD>140</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>4001</TD><TD>Limited Edition</TD><TD>5</TD><TD>261</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>10273</TD><TD>Cat in The Hat Comes Back</TD><TD>5</TD><TD>205</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>11206</TD><TD>Ordean Devil Dogs</TD><TD>4</TD><TD>254</TD><TD>91</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>11621</TD><TD>Light Speed</TD><TD>4</TD><TD>250</TD><TD>120</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>7659</TD><TD>Blue Crew</TD><TD>4</TD><TD>186</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>8962</TD><TD>TimeCrafters</TD><TD>4</TD><TD>177</TD><TD>105</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>17</TD><TD>11906</TD><TD>Absolute Zero</TD><TD>4</TD><TD>177</TD><TD>61</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>18</TD><TD>11412</TD><TD>Green Stop Sign Chisago Lakes Middle School</TD><TD>4</TD><TD>170</TD><TD>90</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>19</TD><TD>9415</TD><TD>Thunderstorm</TD><TD>4</TD><TD>156</TD><TD>49</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>20</TD><TD>3764</TD><TD>Extendomatics</TD><TD>4</TD><TD>140</TD><TD>61</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>21</TD><TD>6699</TD><TD>Tempest</TD><TD>2</TD><TD>296</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>22</TD><TD>11586</TD><TD>Becker Middle School</TD><TD>2</TD><TD>232</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>23</TD><TD>7069</TD><TD>Reboot</TD><TD>2</TD><TD>146</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>24</TD><TD>10733</TD><TD>Capitol Hill FTC</TD><TD>2</TD><TD>140</TD><TD>95</TD><TD>5</TD>
 </TABLE></DIV></HTML>
