add canc-ci and canc-if events

--- a/events/1617velv/canc/1617velv-canc-ci-Rankings.html
+++ b/events/1617velv/canc/1617velv-canc-ci-Rankings.html
@@ -1,2 +1,17 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>California NorCal Cisco<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>11575</TD><TD>Robust Robots</TD><TD>10</TD><TD>220</TD><TD>165</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>11466</TD><TD>tinorobotics2016</TD><TD>8</TD><TD>305</TD><TD>120</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>9727</TD><TD>Armored Patriots</TD><TD>8</TD><TD>235</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>7610</TD><TD>Tino Frontier</TD><TD>6</TD><TD>330</TD><TD>125</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>7391</TD><TD>Error: 7391 Not Found</TD><TD>6</TD><TD>240</TD><TD>90</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>10163</TD><TD>KSJC</TD><TD>6</TD><TD>235</TD><TD>145</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>8381</TD><TD>M</TD><TD>6</TD><TD>215</TD><TD>165</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>11467</TD><TD>tinorobotics2016A</TD><TD>6</TD><TD>205</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>7854</TD><TD>MidKnight Madness</TD><TD>4</TD><TD>340</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>9621</TD><TD>Neologics</TD><TD>4</TD><TD>265</TD><TD>105</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>4345</TD><TD>ART</TD><TD>4</TD><TD>215</TD><TD>90</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>7593</TD><TD>TigerBots</TD><TD>2</TD><TD>250</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>9783</TD><TD>CircuitBreakers2.0</TD><TD>2</TD><TD>245</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>12027</TD><TD>Space Cookies</TD><TD>2</TD><TD>175</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>10148</TD><TD>ART</TD><TD>0</TD><TD>145</TD><TD>35</TD><TD>5</TD>
 </TABLE></DIV></HTML>
