--- a/events/1617velv/canc/1617velv-canc-if-Rankings.html
+++ b/events/1617velv/canc/1617velv-canc-if-Rankings.html
@@ -1,2 +1,19 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>California NorCal Intel Folsom<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>9614</TD><TD>Hyperion</TD><TD>8</TD><TD>333</TD><TD>155</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>8367</TD><TD>ACME Robotics</TD><TD>8</TD><TD>180</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>11182</TD><TD>Wolverines</TD><TD>8</TD><TD>158</TD><TD>90</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>10320</TD><TD>Underdogs</TD><TD>8</TD><TD>115</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>11920</TD><TD>Quarry Lane Cougars</TD><TD>7</TD><TD>265</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>10794</TD><TD>Spaceballs</TD><TD>6</TD><TD>285</TD><TD>160</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>4943</TD><TD>SES Robotics</TD><TD>6</TD><TD>240</TD><TD>160</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>3149</TD><TD>SWAT-bots</TD><TD>6</TD><TD>185</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>7464</TD><TD>Capitals Engineering</TD><TD>6</TD><TD>175</TD><TD>120</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>10189</TD><TD>Still In Beta</TD><TD>4</TD><TD>270</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>3873</TD><TD>Scotbotics</TD><TD>4</TD><TD>235</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>8625</TD><TD></TD><TD>4</TD><TD>228</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>11475</TD><TD>Teravoltz</TD><TD>4</TD><TD>215</TD><TD>155</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>11548</TD><TD>MaD Robotics</TD><TD>4</TD><TD>215</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>6357</TD><TD>Top Dogs</TD><TD>1</TD><TD>178</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>11256</TD><TD>Nano Nerds</TD><TD>0</TD><TD>195</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>17</TD><TD>12105</TD><TD>Robonox</TD><TD>0</TD><TD>185</TD><TD>55</TD><TD>5</TD>
 </TABLE></DIV></HTML>
