--- a/events/1617velv/io/1617velv-io-svlcmp-Rankings.html
+++ b/events/1617velv/io/1617velv-io-svlcmp-Rankings.html
@@ -1,20 +1,18 @@
-<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Iowa Nevada League Championship<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
-<TR  ALIGN=CENTER><TD>1</TD><TD>10198</TD><TD>STEM Punk</TD><TD>8</TD><TD>220</TD><TD>100</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>2</TD><TD>7491</TD><TD>Robot Corps</TD><TD>8</TD><TD>180</TD><TD>163</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>3</TD><TD>3609</TD><TD>Polar Technics</TD><TD>7</TD><TD>115</TD><TD>82</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>4</TD><TD>3738</TD><TD>3738Robotics</TD><TD>6</TD><TD>170</TD><TD>85</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>5</TD><TD>10435</TD><TD>Circuit Breakers</TD><TD>6</TD><TD>150</TD><TD>75</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>6</TD><TD>4283</TD><TD>Fully Updated</TD><TD>6</TD><TD>120</TD><TD>100</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>7</TD><TD>5126</TD><TD>DICE</TD><TD>6</TD><TD>110</TD><TD>65</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>8</TD><TD>6666</TD><TD>Tinkerbelles</TD><TD>6</TD><TD>80</TD><TD>75</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>9</TD><TD>6103</TD><TD>Decepticonasauruses</TD><TD>6</TD><TD>70</TD><TD>75</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>10</TD><TD>10012</TD><TD>Nevada CSD</TD><TD>5</TD><TD>150</TD><TD>75</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>11</TD><TD>6691</TD><TD>Cyber Reality</TD><TD>4</TD><TD>255</TD><TD>163</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>12</TD><TD>6309</TD><TD>Oh.</TD><TD>4</TD><TD>180</TD><TD>97</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>13</TD><TD>9356</TD><TD>System Overload</TD><TD>4</TD><TD>145</TD><TD>90</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>14</TD><TD>7617</TD><TD>Elemental Fusion</TD><TD>4</TD><TD>140</TD><TD>75</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>15</TD><TD>5340</TD><TD>Gone Phishing</TD><TD>3</TD><TD>205</TD><TD>90</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>16</TD><TD>10181</TD><TD>New Horizons</TD><TD>3</TD><TD>135</TD><TD>60</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>17</TD><TD>6340</TD><TD>Wauctopi</TD><TD>2</TD><TD>160</TD><TD>65</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>18</TD><TD>6147</TD><TD>Newbotics</TD><TD>2</TD><TD>115</TD><TD>55</TD><TD>5</TD>
+<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Iowa Southwest Valley League Championship<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>11316</TD><TD>Weapons of Mass Construction</TD><TD>10</TD><TD>183</TD><TD>165</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>11391</TD><TD>Robotic Rails</TD><TD>8</TD><TD>130</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>9974</TD><TD>T.H.O.R.</TD><TD>8</TD><TD>110</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>6534</TD><TD>MECanism</TD><TD>8</TD><TD>91</TD><TD>165</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>3634</TD><TD>KISS</TD><TD>6</TD><TD>112</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>8882</TD><TD>Annihil8ors</TD><TD>6</TD><TD>111</TD><TD>155</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>11384</TD><TD>FTC Thunderstruck</TD><TD>6</TD><TD>65</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>12233</TD><TD>Rails Robotic Legion</TD><TD>4</TD><TD>173</TD><TD>77</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>7823</TD><TD>Roadrunner Robotics</TD><TD>4</TD><TD>132</TD><TD>40</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>8930</TD><TD>Tech-Nical Difficulties</TD><TD>4</TD><TD>126</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>7618</TD><TD>The Pi-neapples</TD><TD>4</TD><TD>125</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>9566</TD><TD>Tech Bam</TD><TD>4</TD><TD>61</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>11222</TD><TD>TROJAN TERABYTES</TD><TD>2</TD><TD>163</TD><TD>77</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>12097</TD><TD>Callanan Robotics</TD><TD>2</TD><TD>157</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>7621</TD><TD>The Pi-rates</TD><TD>2</TD><TD>100</TD><TD>35</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>11390</TD><TD>Bows and Bolts</TD><TD>2</TD><TD>81</TD><TD>60</TD><TD>5</TD>
 </TABLE></DIV></HTML>
