--- a/events/1617velv/ok/1617velv-ok-mu-Rankings.html
+++ b/events/1617velv/ok/1617velv-ok-mu-Rankings.html
@@ -1,15 +1,18 @@
-<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Oklahoma Muskogee<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
-<TR  ALIGN=CENTER><TD>1</TD><TD>6735</TD><TD>Team Medusa</TD><TD>10</TD><TD>555</TD><TD>150</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>2</TD><TD>8373</TD><TD>Diva Force</TD><TD>10</TD><TD>480</TD><TD>200</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>3</TD><TD>7163</TD><TD>The Bazinga Project</TD><TD>10</TD><TD>460</TD><TD>150</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>4</TD><TD>5044</TD><TD>Pirates</TD><TD>8</TD><TD>525</TD><TD>150</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>5</TD><TD>4155</TD><TD>Rougher Robo Royalty</TD><TD>8</TD><TD>335</TD><TD>160</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>6</TD><TD>10355</TD><TD>Eagle Factory Robotics</TD><TD>6</TD><TD>520</TD><TD>135</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>7</TD><TD>4378</TD><TD>Black Box Robotics</TD><TD>6</TD><TD>435</TD><TD>200</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>8</TD><TD>8825</TD><TD>CADFish</TD><TD>4</TD><TD>525</TD><TD>150</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>9</TD><TD>7366</TD><TD>The Lab Rats</TD><TD>4</TD><TD>465</TD><TD>150</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>10</TD><TD>11354</TD><TD>The Midnight Ostrich Runners</TD><TD>4</TD><TD>385</TD><TD>140</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>11</TD><TD>4281</TD><TD>R2D2</TD><TD>4</TD><TD>270</TD><TD>95</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>12</TD><TD>11572</TD><TD>Post 26 #2</TD><TD>2</TD><TD>470</TD><TD>110</TD><TD>6</TD>
-<TR  ALIGN=CENTER><TD>13</TD><TD>11746</TD><TD>Robostangs</TD><TD>2</TD><TD>365</TD><TD>185</TD><TD>6</TD>
+<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Oklahoma Mustang<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>10641</TD><TD>Atomic Gears</TD><TD>10</TD><TD>135</TD><TD>90</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>10368</TD><TD>Matrix Robotics</TD><TD>10</TD><TD>103</TD><TD>75</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>8866</TD><TD>Phi-Robot 2</TD><TD>9</TD><TD>120</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>11376</TD><TD>Cyber Tigers</TD><TD>7</TD><TD>95</TD><TD>40</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>10355</TD><TD>Eagle Factory Robotics</TD><TD>6</TD><TD>130</TD><TD>52</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>11240</TD><TD>Tech Terrorz</TD><TD>6</TD><TD>125</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>11867</TD><TD>MNMS Stallions</TD><TD>6</TD><TD>85</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>7492</TD><TD>R^3 (Radical Renegade Roboticists)</TD><TD>5</TD><TD>140</TD><TD>75</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>7814</TD><TD>Weatherford Robotics Club</TD><TD>4</TD><TD>108</TD><TD>45</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>6973</TD><TD>Radical Robotics</TD><TD>4</TD><TD>70</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>5395</TD><TD>Team Clutch</TD><TD>3</TD><TD>163</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>7452</TD><TD>Iron Giants</TD><TD>2</TD><TD>180</TD><TD>50</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>11572</TD><TD>Post 26 #2</TD><TD>2</TD><TD>120</TD><TD>50</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>10259</TD><TD>Science</TD><TD>2</TD><TD>108</TD><TD>40</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>6974</TD><TD>Ministry of Magic</TD><TD>2</TD><TD>75</TD><TD>90</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>11344</TD><TD>Merritt Oilers</TD><TD>2</TD><TD>35</TD><TD>40</TD><TD>5</TD>
 </TABLE></DIV></HTML>
