updated canc and nc with full raw data

--- a/events/1617velv/canc/1617velv-canc-bu1-Rankings.html
+++ b/events/1617velv/canc/1617velv-canc-bu1-Rankings.html
@@ -1,4 +1,4 @@
-<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>California NorCal Burlingame<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>California NC Burlingame<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
 <TR  ALIGN=CENTER><TD>1</TD><TD>9784</TD><TD>DryKiss</TD><TD>9</TD><TD>175</TD><TD>85</TD><TD>5</TD>
 <TR  ALIGN=CENTER><TD>2</TD><TD>10794</TD><TD>Spaceballs</TD><TD>8</TD><TD>160</TD><TD>170</TD><TD>5</TD>
 <TR  ALIGN=CENTER><TD>3</TD><TD>548</TD><TD>Geek Squad</TD><TD>8</TD><TD>141</TD><TD>120</TD><TD>5</TD>
@@ -19,5 +19,4 @@
 <TR  ALIGN=CENTER><TD>18</TD><TD>5773</TD><TD>Ink and Metal</TD><TD>4</TD><TD>30</TD><TD>70</TD><TD>5</TD>
 <TR  ALIGN=CENTER><TD>19</TD><TD>4157</TD><TD>The Duckinators</TD><TD>2</TD><TD>95</TD><TD>80</TD><TD>5</TD>
 <TR  ALIGN=CENTER><TD>20</TD><TD>8367</TD><TD>ACME Robotics</TD><TD>0</TD><TD>90</TD><TD>60</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>21</TD><TD>11021</TD><TD>Catalyst</TD><TD>0</TD><TD>0</TD><TD>0</TD><TD>0</TD>
 </TABLE></DIV></HTML>
