--- a/events/1617velv/canc/1617velv-canc-gh-MatchResultsDetails.html
+++ b/events/1617velv/canc/1617velv-canc-gh-MatchResultsDetails.html
@@ -1,4 +1,4 @@
-<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Match Results (w/ Details)</TITLE></head><CENTER><H2>California NorCal GitHub<BR>Match Results (w/ Details)</H2></CENTER><HR>Column Abbreviations:<ul><li>Tot - Total Match Score</li><li>Auto - Autonomous Score</li><li>AutoB - Autonomous Bonus Score</li><li>Tele - Tele-Operated Score</li><li>EndG - End Game Score</li><li>Pen - Penalty Points</li><p> </p><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>&nbsp;</th><TH>&nbsp;</th><TH>&nbsp;</th><TH >&nbsp;</th><TH COLSPAN="6">Red Scores</TH><TH COLSPAN="6">Blue Scores</TH><TR ALIGN=CENTER><TH >Match</TH><TH >Result</TH><TH >Red Teams</TH><TH >Blue Teams</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH></TR>
+<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Match Results (w/ Details)</TITLE></head><CENTER><H2>California NC GitHub<BR>Match Results (w/ Details)</H2></CENTER><HR>Column Abbreviations:<ul><li>Tot - Total Match Score</li><li>Auto - Autonomous Score</li><li>AutoB - Autonomous Bonus Score</li><li>Tele - Tele-Operated Score</li><li>EndG - End Game Score</li><li>Pen - Penalty Points</li><p> </p><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>&nbsp;</th><TH>&nbsp;</th><TH>&nbsp;</th><TH >&nbsp;</th><TH COLSPAN="6">Red Scores</TH><TH COLSPAN="6">Blue Scores</TH><TR ALIGN=CENTER><TH >Match</TH><TH >Result</TH><TH >Red Teams</TH><TH >Blue Teams</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH></TR>
 
 <TR>
   <TD HEIGHT=17 ALIGN=LEFT>Q-1</TD>
@@ -325,24 +325,6 @@
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
 </TR>
 <TR>
-  <TD HEIGHT=17 ALIGN=LEFT>SF-2-1</TD>
-  <TD ALIGN=LEFT>50-25 R</TD>
-  <TD ALIGN=LEFT>3873 8577 </TD>
-  <TD ALIGN=LEFT>8404 11898 </TD>
-  <TD ALIGN=RIGHT SDVAL="50" SDNUM="1033;">50</TD>
-  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="25" SDNUM="1033;">25</TD>
-  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-</TR>
-<TR>
   <TD HEIGHT=17 ALIGN=LEFT>SF-1-2</TD>
   <TD ALIGN=LEFT>140-40 R</TD>
   <TD ALIGN=LEFT>7591 8872 </TD>
@@ -357,6 +339,24 @@
   <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
   <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>SF-2-1</TD>
+  <TD ALIGN=LEFT>50-25 R</TD>
+  <TD ALIGN=LEFT>3873 8577 </TD>
+  <TD ALIGN=LEFT>8404 11898 </TD>
+  <TD ALIGN=RIGHT SDVAL="50" SDNUM="1033;">50</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="25" SDNUM="1033;">25</TD>
+  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
 </TR>
