--- a/events/1617velv/canc/1617velv-canc-go-MatchResultsDetails.html
+++ b/events/1617velv/canc/1617velv-canc-go-MatchResultsDetails.html
@@ -1,4 +1,4 @@
-<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Match Results (w/ Details)</TITLE></head><CENTER><H2>California NorCal Google<BR>Match Results (w/ Details)</H2></CENTER><HR>Column Abbreviations:<ul><li>Tot - Total Match Score</li><li>Auto - Autonomous Score</li><li>AutoB - Autonomous Bonus Score</li><li>Tele - Tele-Operated Score</li><li>EndG - End Game Score</li><li>Pen - Penalty Points</li><p> </p><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>&nbsp;</th><TH>&nbsp;</th><TH>&nbsp;</th><TH >&nbsp;</th><TH COLSPAN="6">Red Scores</TH><TH COLSPAN="6">Blue Scores</TH><TR ALIGN=CENTER><TH >Match</TH><TH >Result</TH><TH >Red Teams</TH><TH >Blue Teams</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH></TR>
+<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Match Results (w/ Details)</TITLE></head><CENTER><H2>California NC Google<BR>Match Results (w/ Details)</H2></CENTER><HR>Column Abbreviations:<ul><li>Tot - Total Match Score</li><li>Auto - Autonomous Score</li><li>AutoB - Autonomous Bonus Score</li><li>Tele - Tele-Operated Score</li><li>EndG - End Game Score</li><li>Pen - Penalty Points</li><p> </p><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>&nbsp;</th><TH>&nbsp;</th><TH>&nbsp;</th><TH >&nbsp;</th><TH COLSPAN="6">Red Scores</TH><TH COLSPAN="6">Blue Scores</TH><TR ALIGN=CENTER><TH >Match</TH><TH >Result</TH><TH >Red Teams</TH><TH >Blue Teams</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH></TR>
 
 <TR>
   <TD HEIGHT=17 ALIGN=LEFT>Q-1</TD>
@@ -325,24 +325,6 @@
   <TD ALIGN=RIGHT SDVAL="60" SDNUM="1033;">60</TD>
 </TR>
 <TR>
-  <TD HEIGHT=17 ALIGN=LEFT>SF-2-1</TD>
-  <TD ALIGN=LEFT>135-15 R</TD>
-  <TD ALIGN=LEFT>8872 8404 </TD>
-  <TD ALIGN=LEFT>524 12105 </TD>
-  <TD ALIGN=RIGHT SDVAL="135" SDNUM="1033;">135</TD>
-  <TD ALIGN=RIGHT SDVAL="65" SDNUM="1033;">65</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="70" SDNUM="1033;">70</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="15" SDNUM="1033;">15</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="15" SDNUM="1033;">15</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-</TR>
-<TR>
   <TD HEIGHT=17 ALIGN=LEFT>SF-1-2</TD>
   <TD ALIGN=LEFT>135-85 R</TD>
   <TD ALIGN=LEFT>8381 9914 </TD>
@@ -361,24 +343,6 @@
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
 </TR>
 <TR>
-  <TD HEIGHT=17 ALIGN=LEFT>SF-2-2</TD>
-  <TD ALIGN=LEFT>50-5 R</TD>
-  <TD ALIGN=LEFT>8872 8404 </TD>
-  <TD ALIGN=LEFT>524 12105 </TD>
-  <TD ALIGN=RIGHT SDVAL="50" SDNUM="1033;">50</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="50" SDNUM="1033;">50</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-</TR>
-<TR>
   <TD HEIGHT=17 ALIGN=LEFT>SF-1-3</TD>
   <TD ALIGN=LEFT>125-55 R</TD>
   <TD ALIGN=LEFT>8381 9914 </TD>
@@ -393,6 +357,42 @@
   <TD ALIGN=RIGHT SDVAL="35" SDNUM="1033;">35</TD>
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
   <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>SF-2-1</TD>
+  <TD ALIGN=LEFT>135-15 R</TD>
+  <TD ALIGN=LEFT>8872 8404 </TD>
+  <TD ALIGN=LEFT>524 12105 </TD>
+  <TD ALIGN=RIGHT SDVAL="135" SDNUM="1033;">135</TD>
+  <TD ALIGN=RIGHT SDVAL="65" SDNUM="1033;">65</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="70" SDNUM="1033;">70</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="15" SDNUM="1033;">15</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="15" SDNUM="1033;">15</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>SF-2-2</TD>
+  <TD ALIGN=LEFT>50-5 R</TD>
+  <TD ALIGN=LEFT>8872 8404 </TD>
+  <TD ALIGN=LEFT>524 12105 </TD>
+  <TD ALIGN=RIGHT SDVAL="50" SDNUM="1033;">50</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="50" SDNUM="1033;">50</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
 </TR>
