--- a/events/1617velv/canc/1617velv-canc-wc-MatchResultsDetails.html
+++ b/events/1617velv/canc/1617velv-canc-wc-MatchResultsDetails.html
@@ -1,4 +1,4 @@
-<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Match Results (w/ Details)</TITLE></head><CENTER><H2>California NorCal Walnut Creek<BR>Match Results (w/ Details)</H2></CENTER><HR>Column Abbreviations:<ul><li>Tot - Total Match Score</li><li>Auto - Autonomous Score</li><li>AutoB - Autonomous Bonus Score</li><li>Tele - Tele-Operated Score</li><li>EndG - End Game Score</li><li>Pen - Penalty Points</li><p> </p><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>&nbsp;</th><TH>&nbsp;</th><TH>&nbsp;</th><TH >&nbsp;</th><TH COLSPAN="6">Red Scores</TH><TH COLSPAN="6">Blue Scores</TH><TR ALIGN=CENTER><TH >Match</TH><TH >Result</TH><TH >Red Teams</TH><TH >Blue Teams</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH></TR>
+<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Match Results (w/ Details)</TITLE></head><CENTER><H2>California NC Walnut Creek<BR>Match Results (w/ Details)</H2></CENTER><HR>Column Abbreviations:<ul><li>Tot - Total Match Score</li><li>Auto - Autonomous Score</li><li>AutoB - Autonomous Bonus Score</li><li>Tele - Tele-Operated Score</li><li>EndG - End Game Score</li><li>Pen - Penalty Points</li><p> </p><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>&nbsp;</th><TH>&nbsp;</th><TH>&nbsp;</th><TH >&nbsp;</th><TH COLSPAN="6">Red Scores</TH><TH COLSPAN="6">Blue Scores</TH><TR ALIGN=CENTER><TH >Match</TH><TH >Result</TH><TH >Red Teams</TH><TH >Blue Teams</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH></TR>
 
 <TR>
   <TD HEIGHT=17 ALIGN=LEFT>Q-1</TD>
@@ -361,24 +361,6 @@
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
 </TR>
 <TR>
-  <TD HEIGHT=17 ALIGN=LEFT>SF-2-1</TD>
-  <TD ALIGN=LEFT>95-65 R</TD>
-  <TD ALIGN=LEFT>6982 524 </TD>
-  <TD ALIGN=LEFT>9914 10794 </TD>
-  <TD ALIGN=RIGHT SDVAL="95" SDNUM="1033;">95</TD>
-  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="25" SDNUM="1033;">25</TD>
-  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="65" SDNUM="1033;">65</TD>
-  <TD ALIGN=RIGHT SDVAL="15" SDNUM="1033;">15</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
-  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-</TR>
-<TR>
   <TD HEIGHT=17 ALIGN=LEFT>SF-1-2</TD>
   <TD ALIGN=LEFT>40-85 B</TD>
   <TD ALIGN=LEFT>6818 4475 </TD>
@@ -394,24 +376,6 @@
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
   <TD ALIGN=RIGHT SDVAL="55" SDNUM="1033;">55</TD>
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-</TR>
-<TR>
-  <TD HEIGHT=17 ALIGN=LEFT>SF-2-2</TD>
-  <TD ALIGN=LEFT>155-120 R</TD>
-  <TD ALIGN=LEFT>6982 524 </TD>
-  <TD ALIGN=LEFT>9914 10794 </TD>
-  <TD ALIGN=RIGHT SDVAL="155" SDNUM="1033;">155</TD>
-  <TD ALIGN=RIGHT SDVAL="45" SDNUM="1033;">45</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
-  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
-  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
-  <TD ALIGN=RIGHT SDVAL="120" SDNUM="1033;">120</TD>
-  <TD ALIGN=RIGHT SDVAL="60" SDNUM="1033;">60</TD>
-  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
-  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
-  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
 </TR>
 <TR>
@@ -431,6 +395,42 @@
   <TD ALIGN=RIGHT SDVAL="65" SDNUM="1033;">65</TD>
   <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
   <TD ALIGN=RIGHT SDVAL="80" SDNUM="1033;">80</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>SF-2-1</TD>
+  <TD ALIGN=LEFT>95-65 R</TD>
+  <TD ALIGN=LEFT>6982 524 </TD>
+  <TD ALIGN=LEFT>9914 10794 </TD>
+  <TD ALIGN=RIGHT SDVAL="95" SDNUM="1033;">95</TD>
+  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="25" SDNUM="1033;">25</TD>
+  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="65" SDNUM="1033;">65</TD>
+  <TD ALIGN=RIGHT SDVAL="15" SDNUM="1033;">15</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>SF-2-2</TD>
+  <TD ALIGN=LEFT>155-120 R</TD>
+  <TD ALIGN=LEFT>6982 524 </TD>
+  <TD ALIGN=LEFT>9914 10794 </TD>
+  <TD ALIGN=RIGHT SDVAL="155" SDNUM="1033;">155</TD>
+  <TD ALIGN=RIGHT SDVAL="45" SDNUM="1033;">45</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
+  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
+  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
+  <TD ALIGN=RIGHT SDVAL="120" SDNUM="1033;">120</TD>
+  <TD ALIGN=RIGHT SDVAL="60" SDNUM="1033;">60</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
 </TR>
 <TR>
   <TD HEIGHT=17 ALIGN=LEFT>F-1</TD>
