add all wi, fix team number problem in io-jdsq

--- a/events/1617velv/io/1617velv-io-jdsq-Rankings.html
+++ b/events/1617velv/io/1617velv-io-jdsq-Rankings.html
@@ -1,5 +1,5 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Iowa John Deere Super-Qualifier<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
-<TR  ALIGN=CENTER><TD>1</TD><TD>10438</TD><TD>Ein</TD><TD>10</TD><TD>562</TD><TD>215</TD><TD>6</TD>
+<TR  ALIGN=CENTER><TD>1</TD><TD>10435</TD><TD>Circuit Breakers</TD><TD>10</TD><TD>562</TD><TD>215</TD><TD>6</TD>
 <TR  ALIGN=CENTER><TD>2</TD><TD>9968</TD><TD>CrossFire</TD><TD>10</TD><TD>552</TD><TD>170</TD><TD>6</TD>
 <TR  ALIGN=CENTER><TD>3</TD><TD>7236</TD><TD>Recharged Green</TD><TD>10</TD><TD>390</TD><TD>145</TD><TD>6</TD>
 <TR  ALIGN=CENTER><TD>4</TD><TD>7491</TD><TD>Robot Corps</TD><TD>10</TD><TD>387</TD><TD>136</TD><TD>6</TD>
